fixed the problem with white space on the right side of the document

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,14 @@
 *{
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+}
+.overflow{
+    position: relative;
+    overflow-x: hidden;
 }
 main{
     padding: 5px;
